Lookups for locations and titles

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -49,6 +49,11 @@
   cursor: pointer;
 }
 
+.participantDelete {
+  cursor: pointer;
+  color: #900;
+}
+
 .participant.paid td,
 #activityInfoOverview td.paid {
   background-color: #E5FFE5;
